syntax="proto3";
package proto;

service ItemRepository{
    rpc CreateItem(CreateItemRequest) returns (Item){}
    rpc ListItems(ListItemsRequest) returns (Item) {}
    rpc BlockUser(BlockUserRequest) returns (BlockUserResponse) {}
    
    // rpс UpdateItem(item *models.Item) (*models.Item, error)
	// rpс DeleteItem(itemId int32) error
	// rpс GetItem(itemId int32) (*models.Item, error)
	// rpс ListItems(filter *ItemFilter) ([]*models.Item, error)
	
	// rpс CreateOrder(order *models.Order) (*models.Order, error)
	// rpс ListOrders(filter *OrderFilter) ([]*models.Order, error)

}

message BlockUserRequest{
    int32 id = 1;
    string name = 2;
}

message BlockUserResponse{
    bool rez=1;
    string errname = 2;
}


message Item{
    int32 id = 1;
    string name = 2;
    int64 price =3;
}

message CreateItemRequest{
    string name = 1;
    int64  price = 2;
}

message ListItemResponse{
    repeated Item items = 1;
}

message ListItemsRequest{
    int64 price_right = 1;
    int64 price_left = 2;
    int32 limit = 3;
    int32 offset = 4;
}